--- a/main.css
+++ b/main.css
@@ -1,11 +1,63 @@
+
 div {
-  border: 20px solid #000; /* this is short hand for setting
-                            the border's width, its type, and color */
-  display: inline-block; /* a way of positioning elements */
-  min-width: 20em; /* the two min styles make the shape */
-  min-height: 25em; /* of the divs oblong*/
-  border-radius: 50%; /* this makes the normally square div round */
-  border-left-color: transparent; /* these remove the color from the left side */
-  border-right-color: transparent; /* the right side */
-  border-bottom-color: transparent; /* and the bottom of the circle */
+  border: 20px solid #000; /* Base border style */
+  display: inline-block; /* Allows inline-block behavior */
+  border-radius: 50%; /* Makes the div circular */
+  border-left-color: transparent; /* Makes the left side of the border transparent */
+  border-right-color: transparent; /* Makes the right side of the border transparent */
+  border-bottom-color: transparent; /* Makes the bottom side of the border transparent */
+}
+
+#red {
+  border-top-color: #f00; 
+  width: 20em;
+  height: 25em;
+}
+
+#orange {
+  border-top-color: #ffa500;
+  width: 18em;
+  height: 23em;
+}
+
+#yellow {
+  border-top-color: #ff0;
+  width: 16em;
+  height: 21em;
+}
+
+#green {
+  border-top-color: #00bc3f; 
+  height: 19em;
+}
+
+#blue {
+  border-top-color: #06f; 
+  width: 12em;
+  height: 17em;
+}
+
+#indigo {
+  border-top-color: #8a2be2;
+  width: 10em;
+  height: 15em;
+}
+
+#violet {
+  border-top-color: #d300c9; 
+  width: 8em;
+  height: 13em;
+}
+
+
+body {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+div {
+  position: absolute;
 }
